--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,6 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
-remappings = ['ds-test/=lib/ds-test/src/', 'hevm/=lib/hevm/src/','@openzeppelin=node_modules/@openzeppelin']
+remappings = ['ds-test/=lib/ds-test/src/', 'hevm/=lib/hevm/src/','openzeppelin/=lib/openzeppelin-contracts']
 
 # See more config options https://github.com/gakonst/foundry/tree/master/config
