--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,11 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
-remappings = ['ds-test/=lib/ds-test/src/', 'hevm/=lib/hevm/src/','openzeppelin/=lib/openzeppelin-contracts']
+remappings = [
+    'ds-test/=lib/ds-test/src/', 
+    'hevm/=lib/hevm/src/',
+    'openzeppelin/=lib/openzeppelin-contracts',
+    'solmate/=lib/solmate/src/'
+    ]
 
 # See more config options https://github.com/gakonst/foundry/tree/master/config
